# promote-release

./: Cargo.toml  README.md  build.rs  docker-compose.yml  run.sh  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
local/: Dockerfile  channel-rust-beta.toml  channel-rust-dummy.toml  channel-rust-nightly.toml  channel-rust-stable.toml  check-signature.sh  generate-gpg-key.conf  github-simulated-auth-credentials.htpasswd  idle.sh  nginx.conf  release.sh  run.sh  rustup.sh  secrets.toml  setup.sh
prod/: Dockerfile  load-gpg-keys.sh
src/: branching.rs  build_manifest.rs  config.rs  curl_helper.rs  discourse.rs  fastly.rs  github.rs  main.rs  recompress.rs  rustup.rs  sign.rs  smoke_test.rs
src/sign/: test.rs
src/smoke_test/: test.rs
