[package]
name = "promote-release"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

build = "build.rs"

[dependencies]
curl = "0.4"
flate2 = "1"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
toml = "0.4"
rand = "0.6"
xz2 = "0.1"
anyhow = "1.0.32"
rayon = "1.4.0"
sha2 = "0.9.1"
hex = "0.4.2"
pgp = "0.7.1"
chrono = "0.4.19"
git2 = "0.13.11"
tempfile = "3.1.0"
hyper = "0.13.8"
tokio = { version = "0.2.22", features = ["rt-threaded", "macros", "fs", "sync"] }
