[package]
name = "promote-release"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"

build = "build.rs"

[dependencies]
curl = "0.4"
flate2 = "1"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
toml = "1.1.0"
rand = "0.10"
xz2 = "0.1"
anyhow = "1.0.32"
rayon = "1.4.0"
sha2 = "0.10"
hex = "0.4.2"
pgp = "0.10"
rsa = "0.8"
base64 = "0.22"
chrono = "0.4.19"
git2 = "0.20.4"
tempfile = "3.1.0"
tokio = { version = "1", features = ["rt", "time", "net", "sync", "macros"] }
hyper = "1.8.1"
hyper-util = { version = "0.1.20", features = ["http1", "server", "server-graceful", "tokio"] }
num_cpus = "1.13.0"
http-body-util = { version = "0.1.3", features = ["full"] }
bytes = "1.11.1"
